--- a/src/index.css
+++ b/src/index.css
@@ -51,9 +51,9 @@
   --color-grey-800: #c2c2c2;
   --color-grey-900: #e0e0e0;
 
-  --color-primary-100: #040509;
-  --color-primary-200: #080b12;
-  --color-primary-300: #FFFFF; /*#0c101b*/
+  --color-primary-100: #F8F8F8;
+  --color-primary-200: #F2F2F2;
+  --color-primary-300: #FFFFFF; /*#0c101b*/
   --color-primary-400: #FFFFFF; /*#f2f0f0*/
   --color-primary-500: #FAFAFA;  /*#141b2d*/
   --color-primary-600: #1F2A40;
@@ -103,11 +103,11 @@
   --color-grey-800: #292929;
   --color-grey-900: #141414;
 
-  --color-primary-100: #d0d1d5;
-  --color-primary-200: #a1a4ab;
-   --color-primary-300:#172235; 
-   --color-primary-400: #1D2739;
-   --color-primary-500: #141b2d;
+  --color-primary-100: #172235;
+  --color-primary-200: #172235;
+  --color-primary-300:#172235; 
+  --color-primary-400: #1D2739;
+  --color-primary-500: #141b2d;
   --color-primary-600: #101624;
   --color-primary-700: #0c101b;
   --color-primary-800: #080b12;
@@ -152,9 +152,7 @@
   background-color: #FAFAFA;
 
 }
-.icon-color{
-  color: #888888;
-}
+
 .text-color{
   color: #000000;
   
@@ -220,4 +218,9 @@
 .Compromised{
   background-color: #FFEFEF;
   color: #F04D4E;
+}
+
+.error-container {
+  height: 1px;
+  
 }
